// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EPATH LOGICAL Segment Build Utility Generates Appropriate Output 1`] = `
Object {
  "data": Array [
    32,
    5,
  ],
  "type": "Buffer",
}
`;

exports[`EPATH LOGICAL Segment Build Utility Generates Appropriate Output 2`] = `
Object {
  "data": Array [
    36,
    2,
  ],
  "type": "Buffer",
}
`;

exports[`EPATH LOGICAL Segment Build Utility Generates Appropriate Output 3`] = `
Object {
  "data": Array [
    48,
    1,
  ],
  "type": "Buffer",
}
`;

exports[`EPATH LOGICAL Segment Build Utility Generates Appropriate Output 4`] = `
Object {
  "data": Array [
    37,
    244,
    1,
  ],
  "type": "Buffer",
}
`;

exports[`EPATH LOGICAL Segment Build Utility Generates Appropriate Output 5`] = `
Object {
  "data": Array [
    37,
    0,
    244,
    1,
  ],
  "type": "Buffer",
}
`;

exports[`EPATH LOGICAL Segment Build Utility Generates Appropriate Output 6`] = `
Object {
  "data": Array [
    48,
    1,
  ],
  "type": "Buffer",
}
`;

exports[`EPATH LOGICAL Segment Build Utility Generates Appropriate Output 7`] = `
Object {
  "data": Array [
    36,
    2,
  ],
  "type": "Buffer",
}
`;
